--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -24,7 +24,6 @@
       </div>
     </div>
     <script>
-
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -59,13 +58,13 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AccelerometerBall.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AccelerometerBall.data",
-        frameworkUrl: buildUrl + "/AccelerometerBall.framework.js",
-        codeUrl: buildUrl + "/AccelerometerBall.wasm",
+        dataUrl: buildUrl + "/AccelerometerBall.data.br",
+        frameworkUrl: buildUrl + "/AccelerometerBall.framework.js.br",
+        codeUrl: buildUrl + "/AccelerometerBall.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Metacog",
+        companyName: "DefaultCompany",
         productName: "Accelerometer",
-        productVersion: "0.1",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
@@ -90,7 +89,7 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
@@ -105,18 +104,16 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
+        }).then((unityInstance) => {
+          loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
       document.body.appendChild(script);
-
     </script>
   </body>
 </html>
