--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AccelerometerBall.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AccelerometerBall.data.br",
-        frameworkUrl: buildUrl + "/AccelerometerBall.framework.js.br",
-        codeUrl: buildUrl + "/AccelerometerBall.wasm.br",
+        dataUrl: buildUrl + "/AccelerometerBall.data.unityweb",
+        frameworkUrl: buildUrl + "/AccelerometerBall.framework.js.unityweb",
+        codeUrl: buildUrl + "/AccelerometerBall.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Accelerometer",
